převážně opravy překlepů

--- a/Om_2008.8%2Fcs.mw
+++ b/Om_2008.8%2Fcs.mw
@@ -5,8 +5,9 @@ __NOEDITSECTION__
 
 {{Distributions|Openmoko2008.8}}
 
-'''Openmoko2008.8''' nebo '''Om2008.8''' je následovním OS [[Openmoko2007.2]] který má  krycá jméno '''ASU'''.  Bude vydán 8.srpna 2008. Om2008.8 používá EFL jako launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony.
-It is the first step from [[GTK+]] on x11 to using multiple toolkits in combination. Om2008.8 now supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [[GTK+]] applications.
+== Úvod ==
+'''Openmoko2008.8''' nebo '''Om2008.8''' je následovníkem distribuce [[Openmoko2007.2]]. Krycí jméno pro '''Om2008.8''' je '''ASU''' podle původního označení ''April Software Update'' (dubnová aktualizace software). Om2008.8 byl vydán 8.srpna 2008 (a přejmenován na August [=srpnový] Software Update beze změny zkratky ASU). Om2008.8 používá jako manažer EFL (Enlightenment Foundation Libraries), vlastní grafické aplikace a [[QtopiaOnX11|Qtopii na X11]] pro telefonování.
+Jedná se o první krok od GTK+ na X11 směrem k použití více toolkitů současně. Om2008.8 nyní podporuje [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] a [http://www.gtk.org/ GTK+] aplikace.
 
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:100%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:25% " |  
@@ -30,11 +31,11 @@ It is the first step from [[GTK+]] on x11 to using multiple toolkits in combinat
 |}
 
 == Co je nového. ==
-Om2008.8 byl stvořen tak "prázdný" jak je jen možné proto, aby jste mohli na plnou využít svých nápadů.
+Om2008.8 byl stvořen tak "prázdný" jak je jen možné proto, abyste mohli na plno využít svých nápadů.
 
-Think of our products as museums. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
+Představte si naše produkty jako muzea. My tvoříme prostředí. Každé je jiné než ty ostatní. Vy v něm dostanete všemožnou podporu v podobě free art, protože chceme, abyste mu mohli dát svůj význam. Vyberte si: používat, tvořit nebo obojí.
 
-Either way you create your own meaning. It's about you. 
+V každém případě vytváříte své vlastní prostředí. Je to na vás. 
 
 === Customize ===
 Om2008.8 allows you to customize your Neo in many aspects.
@@ -49,47 +50,37 @@ Om2008.8 allows you to customize your Neo in many aspects.
 * share your applications ([[Om2008.8_Installer|Installer]])
 :share your ideas with the world by adding packages to the [http://downloads.openmoko.org/community-repository/ Openmoko Repository].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
 
+=== Om 2008.8 Guide ===
+A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
+
 == Feature Plan ==
 
 You can see a list of available and planned features at [[Openmoko2008.8 Feature Plan]].
 
 == Stažení & Instalace ==
-Doporučujeme "flashnout" následující obrazy.  Pokud nevíte jak "flashnout" vaše zařízení, tak se podívejte na [[Flashing the Neo FreeRunner]].
+Pokud si chcete nainstalovat tuto distribuci, postupujte podle následujících pokynů:
+* stáhněte poslední obraz Om2008.8 na stránce [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]]
+* [[Flashing the Neo FreeRunner|Flashněte]] svůj Neo FreeRunner
 
-=== Share ===
-* share your locations  ([[Om2008.8_Locations|Locations]])
-:you can use '''Locations''' to save your favorite spots and even send it to friends via sms.  How cool is that?!
-* share your applications ([[Om2008.8_Installer|Installer]])
-:share your ideas with the world by adding packages to the [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
-
-=== Om 2008.8 Guide ===
-A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
-
-= Installing =
-
-If you want install this software distribution to your device, you have to follow these steps:
-* Download the recent image of Om2008.8 on the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page
-* [[Flashing the Neo FreeRunner|Flash]] to your Neo FreeRunner
-
-= Known Issues =
+= Známé problémy =
 '''GSM'''
 
-* [http://docs.openmoko.org/trac/ticket/1766 Neni možné vlat nebo přijmout SMS]
-* [http://docs.openmoko.org/trac/ticket/1662 GSM Nefunguje dobře po X hodinách]
+* [http://docs.openmoko.org/trac/ticket/1766 Není možné volat nebo přijmout SMS]
+* [http://docs.openmoko.org/trac/ticket/1662 GSM nefunguje dobře po X hodinách]
 * [https://docs.openmoko.org/trac/ticket/1765 Nezobrazí se Pin Dialog - GSM je nepoužitelné]
 
 '''WiFi'''
  
-* [http://docs.openmoko.org/trac/ticket/1625 WiFi Se dokáže připojí pouze jednou]
+* [http://docs.openmoko.org/trac/ticket/1625 WiFi se dokáže připojit pouze jednou]
 
 '''Kvalita Zvuku'''
 
-* [http://docs.openmoko.org/trac/ticket/1721 QT-Dialer Sometimes can not hear anything durring connecting call]
-* [http://docs.openmoko.org/trac/ticket/1640 Improve overall audio]
+* [http://docs.openmoko.org/trac/ticket/1721 QT-Dialer - někdy není slyšet vyzvánění během vytáčení hovoru]
+* [http://docs.openmoko.org/trac/ticket/1640 Vylepšení kvality zvuku]
 
 '''Systémový Software''' 
 
-* [http://docs.openmoko.org/trac/ticket/1736 Pokud se v průběhu bootu nedotkente obrazovky, telefon usne a už se nikdy neprobudí.]
+* [http://docs.openmoko.org/trac/ticket/1736 Pokud se v průběhu bootu nedotknete obrazovky, telefon usne a už se nikdy neprobudí.]
 * [http://docs.openmoko.org/trac/ticket/1597 After long suspend, kernel thread events]
 * [http://docs.openmoko.org/trac/ticket/1315 xglamo: performance decreases after a while]
 * [http://docs.openmoko.org/trac/ticket/1682 Neo turns off before reaching x]
@@ -108,18 +99,18 @@ This should solve most off your moko side networking issues. If you need any oth
 * Usb-networking will not work until rebooted after initial boot.
 
 '''Použitelnost''' 
-* Pin-Dialog defaultně zobrazuje klavesnici s písmenya. Je třeba přejet prstem nahoru a dolů po obrazovce aby se klávesnice přepnula na numerickou.
+* Pin-Dialog defaultně zobrazuje klávesnici s písmeny. Je třeba přejet prstem nahoru a dolů po obrazovce, aby se klávesnice přepnula na numerickou.
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Sollution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
 
 == Aktualizace ==
 
-There should be some official updates for 2008.8 setup soon, but in the meantime, you'll have to wait.
+Brzy budou zveřejněny oficiální aktualizace Om 2008.8, ale prozatím musíte vyčkat.
 
-{{note|There are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
+{{note|Nikde na buildhost.openmoko.org nejsou k dispozici *ŽÁDNÉ* aktualizace pro 2008.8  - adresář daily-feeds je nekompatibilní s  2008.8 a pokud jej použijete, tak si poškodíte svou instalace software.}}
 
-'''More details about the official updates being set-up here : http://lists.openmoko.org/pipermail/community/2008-August/026515.html'''
+'''Více detailů k uvedení oficiálních aktualizací je k dispozici zde : http://lists.openmoko.org/pipermail/community/2008-August/026515.html (anglicky)'''
 
-In the meantime, you may try at your own risk [[Repositories#OM_2008.8 / ASU by zecke]].
+V mezičase můžete na vlastní riziko zkusit [[Downloads#Unofficial_builds_by_zecke]].
 
 
 == Poznámečka ==
