--- a/Flashing_the_Neo_1973.mw
+++ b/Flashing_the_Neo_1973.mw
@@ -26,7 +26,7 @@ Necessary files are at:
 
 *http://buildhost.automated.it/OM2007.2/?M=D (Location of more current unofficial builds.)
 
-A list of download locations can be found at [[Repositories]]. See [[Phase 1 Software Testing]] for a list of tested images.
+A list of download locations can be found at [[Downloads]]. See [[Phase 1 Software Testing]] for a list of tested images.
 
 
 Changelogs can be found at:
