--- a/Ipkg.mw
+++ b/Ipkg.mw
@@ -9,7 +9,7 @@ For the latest ipk package files from buildhost put the following lines in your 
 
 In the shell, "ipkg update" will update the list of available packages, "ipkg upgrade" will download and install all packages that have a newer version available and "ipkg install new-app" will download and install "new-app".
 
-Have a look at [[Repositories]] to get addresses of alternative software repositories, e.g. ScaredyCat's ipkg repository.
+Have a look at [[Users Repositories]] to get addresses of alternative software repositories, e.g. ScaredyCat's ipkg repository.
 
 == History ==
 
