--- a/SettingsGUI.mw
+++ b/SettingsGUI.mw
@@ -131,7 +131,7 @@ The following archives will have to be installed (source packages: python python
 *  python-threading (should be a dependency of python-subprocess - todo: fix)
 *  python-pygobject (should be a dependency of python-pygtk - todo: fix)
 
-If you want to test this and do not have a build environment, you can 'ipkg install' the python components from the ScaredyCat [[repositories]].
+If you want to test this and do not have a build environment, you can 'ipkg install' the python components from the ScaredyCat [[Downloads]].
 
 {{note|These packages take up a considerable amout of space (about 10 MByte), make sure that you have enough free space or install the packages to the media card as explained in [[package management]].}}
 
