/* Writing python apps for the neo that use ncurses */

--- a/Python_ncurses.mw
+++ b/Python_ncurses.mw
@@ -1,6 +1,6 @@
 == Writing python apps for the neo that use ncurses ==
 
-To get started, visit [[Repositories]] and add ScaredyCat's repository to your list.  Then:
+To get started, visit [[Users Repositories]] and add ScaredyCat's repository to your list.  Then:
 
   ipkg update
   ipkg install python-core python-curses
