--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -52,6 +52,7 @@ Either way you create your own meaning. It's about you.
 === Om 2008.8 Guide ===
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
+<!---the following anchor is here to ensure that the "Download" link at http://openmoko.com/download.html links to the correct section. please don't delete the anchor unless that link is changed or removed--->
 <span id="Flash_Om_2008.8_images"></span>
 = Installing =
 
