*Empty MediaWiki Message*

--- a/Openmoko_developer_guide.mw
+++ b/Openmoko_developer_guide.mw
@@ -35,12 +35,14 @@ This page describes how to start your Openmoko development plan - how to prepare
 
 ==Part IV Sharing programs==
 *[[Latest Images]]
+*[[Users Repositories]]
 *[[Distributions]]
 
 ==Part V Installation==
 ===Install===
 *[[Package management]]
 *[[How to run Openmoko Apps on PC]]
+*[[Downloads]]
 *[[Repositories ]]
 
 ===Image Flashing===
