--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2617,6 +2617,12 @@ Due to common customs problems we created google group to discuss how to get tha
 | 0
 | 1 (P2.10)
 |-
+| 2. [[mravil]]
+| [http://groups.google.com/groups/profile?enc_user=wPw2BRIAAABHcFCworg3Kx3LJrgKbX7Q8rhlH0Pnl47z4AZhN98BFg mravil]
+| 1 (P2.10)
+| 0
+| 1 (P4.10)
+|-
 |Total number:
 |
 | 1
