--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,6 +17,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 </tr>
 <tr valign="top" style="background:#333333">
 <td>
+* 15/8: [[Debian]] on FreeRunner now officially (see [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html])
 * 8/8: First official release of [[Om 2008.8]] (see [http://lists.openmoko.org/pipermail/community/2008-August/025619.html])
 * 4-5/8: Openmoko is at Linuxworld, San Francisco
 * 30/7: The FSO distribution releases [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
