--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -55,7 +55,7 @@ To build u-boot:
 
 == Bootloader binary ==
 
-The latest bootloader binary builds can be found under http://buildhost.openmoko.org/daily/ in the subdirectory 200X.XX/images/.  It should be written to the NAND flash address 0x00000000 (size 0x30000) (the first [[partition]]).
+The latest bootloader binary builds can be found under http://buildhost.openmoko.org/daily/ in the subdirectory [device]/200808/[date]/.  It should be written to the NAND flash address 0x00000000 (size 0x30000) (the first [[partition]]).
 
 == Bootloader development ==
 
