*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -1,5 +1,10 @@
-== Debian on the FreeRunner ==
-
+= Installation =
 There are official instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner, and the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html announcement].
 
 Previous, partly now outdated information on how to install Debian manually has been moved to [[Manual Debian]].
+= Suspend =
+To make suspend available you have to install apmd:
+ apt-get install apmd
+After that you can suspend your phone with:
+ apm -s
+and make it wake up again with pressing the power button.
