--- a/Openmoko_Local_Groups:_Frankfurt_Main.mw
+++ b/Openmoko_Local_Groups:_Frankfurt_Main.mw
@@ -91,6 +91,14 @@ similar to the openroadmap project
 |don't know if i should buy the freerunner ;-)
 |
 |
+|-
+|[[User:self|self]]
+|grafics/design,testing,coding
+|OpenStreetMap with OpenMoko
+|Ingelheim
+|waiting for freerunner delivery
+|
+|
 |}
 
 [[Category:Openmoko Local Groups]]
