*Empty MediaWiki Message*

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -1,1 +1,4 @@
+{{Languages|TangoGPS}}
 TangoGPS is a map application which can utilize Neo's built-in GPS to show your current location.
+
+[[Category:GPS]]
