/* Schritt 1: Download DFU-util */

--- a/Manuals%2FNeo_FreeRunner%2Fde.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fde.mw
@@ -135,6 +135,9 @@ http://downloads.openmoko.org/releases/Om2008.4/dfu-util
 Auf einem Linux-Computer kann dfu-util durch folgenden Befehl heruntergeladen werden:
  wget http://downloads.openmoko.org/releases/Om2008.4/dfu-util
 
+
+Bei der Fehlermeldung "./dfu-util: command not found": Gegebenenfalls dfu-util ausführbar machen.
+
 ===Schritt 2: Flashen des Kernels===
 
 Ein Kernel kann hier runter geladen werden: 
