--- a/PyFeedRead.mw
+++ b/PyFeedRead.mw
@@ -15,5 +15,8 @@ Access the current SVN version at: http://neo1973-germany.de/svn/pyFeedRead/
  
  python-core python-misc python-lang python-pygtk python-netclient
 
+on [[Debian]] you just need:
+ python-gtk2
+
 [[Category:Application Developer]]
 [[Category:Openmoko]]
