--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -1,7 +1,7 @@
 {{Languages|TangoGPS}}
 TangoGPS is a map application which can utilize Neo's built-in GPS to show your current location.
 
-Website: [http://www.tangogps.org]
+Website: http://www.tangogps.org
 
 == Running tangoGPS on OM2008.8 ==
 ... more to follow ...
