/* Running tangoGPS on OM2008.8 */

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -4,6 +4,17 @@ TangoGPS is a map application which can utilize Neo's built-in GPS to show your 
 Website: http://www.tangogps.org
 
 == Running tangoGPS on OM2008.8 ==
-... more to follow ...
+
+{{note|There may be other steps because I remember it took a while before my TangoGPS started working, but these are the only things I remember installing}}
+
+From the freerunner connected to the internet:
+
+  opkg install gpsd
+  opkg install tangogps
+
+If opkg complains about not being able to acquire a lock, try:
+
+  pkill packagekit
+
 
 [[Category:GPS]]
