/* Schritt 1: Download DFU-util */

--- a/Manuals%2FNeo_FreeRunner%2Fde.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fde.mw
@@ -133,10 +133,13 @@ http://downloads.openmoko.org/releases/Om2008.4/dfu-util
 
 
 Auf einem Linux-Computer kann dfu-util durch folgenden Befehl heruntergeladen werden:
- wget http://downloads.openmoko.org/releases/Om2008.4/dfu-util
+wget http://downloads.openmoko.org/releases/Om2008.4/dfu-util
 
 
-Bei der Fehlermeldung "./dfu-util: command not found": Gegebenenfalls dfu-util ausführbar machen.
+Die Datei "dfu-util" muss jetzt noch ausfürbar gemacht werden:
+<pre>
+chmod +x dfu-util
+</pre>
 
 ===Schritt 2: Flashen des Kernels===
 
