*Empty MediaWiki Message*

--- a/External_GPS_antennas.mw
+++ b/External_GPS_antennas.mw
@@ -11,7 +11,7 @@ the GPS chipset has been changed. Even though the antennas listed here will prob
 
 $12,50 at [http://www.amazon.com/gp/product/B000F1WNAO amazon.com]
 The Amazon link will suggest other similar products.
-There are no clear specs, tested in the FR with tangoGPS and got TTFF in few seconds with a clear sky, picks 10 sats.
+There are no clear specs, tested in the FR with [[TangoGPS]] and got TTFF in few seconds with a clear sky, picks 10 sats.
 
 === Haicom GPS-AHI-101 ===
 
