--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -377,7 +377,7 @@ To test GPS, you can use agpsui:
 
  # opkg install openmoko-agpsui
 
-For a nice map, try tangoGPS:
+For a nice map, try [[tangoGPS]]:
 
  # opkg install http://www.tangogps.org/downloads/tangogps_0.9.2-r1_armv4t.ipk
 
