--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -29,6 +29,9 @@ Please add your application to the bottom of the list
  |Project Homepage
  |http://www.tangogps.org
  |-
+ |Wiki
+ |[[TangoGPS]]
+ |-
  |Video
  |http://www.youtube.com/watch?v=hn7wuxlTNvs 
  |-
