--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -314,7 +314,7 @@ We also need to change the symlink for the X server to either Xfbdev or Xglamo (
 
 =GPS=
 
-Install gpsd and an application like tangogps on Debian:
+Install gpsd and an application like [[TangoGPS]] on Debian:
 
  (as root)
  apt-get install gpsd
