*Empty MediaWiki Message*

--- a/Biking.mw
+++ b/Biking.mw
@@ -18,6 +18,6 @@ The regulator will have to be a do-it-yourself project regardless of the power s
 
 == Software for biking ==
 
-* TangoGPS
+* [[TangoGPS]]
 
 [[Category:Technical]]
