/* Running tangoGPS on OM2008.8 */

--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -16,5 +16,8 @@ If opkg complains about not being able to acquire a lock, try:
 
   pkill packagekit
 
+I think TangoGPS may have started working after I followed the instructions to get GPRS working with GSM multiplexing here: [[Manually_using_GPRS#Option_1:_With_GSM_multiplexing_and_with_a_GUI]]
+
+There are steps included in those instructions to improve GPS performance.  The great thing is that once you get GPRS working, you can roam with TangoGPS running and have it download maps as needed over the GPRS connection!
 
 [[Category:GPS]]
