--- a/Om_2007.2_Applications.mw
+++ b/Om_2007.2_Applications.mw
@@ -1,3 +1,4 @@
+{{Gta02menu}}
 == Overview ==
 This page describes the set of core applications '''currently''' included in Openmoko.  Additional/Community Apps listed here is limited to popular apps under consideration for inclusion into the core.
 
