--- a/Applications.mw
+++ b/Applications.mw
@@ -32,12 +32,8 @@ Although [[Openmoko]] is designed for smartphones that use a stylus, it would be
 * Reduce at the minimum the need for unused space: borders, intra-widgets distance.
 
 === 2007.2 Applications ===
-These applications use the second generation interface:
-
-* [[Contacts/2007.2|Contacts]]
-* [[Today/2007.2|Today]]
-* [[Dialer/2007.2|Dialer]]
-* [[Display_Locker|Display Locker]]
+These applications use the second generation interface:<br>
+see [[Om 2007.2 Applications]]
 
 === 2007 Applications ===
 These applications use the first generation interface: <br>
