*Empty MediaWiki Message*

--- a/Debug_Board.mw
+++ b/Debug_Board.mw
@@ -1,3 +1,4 @@
+{{Dboard}}
 There are three different Debug Boards for [[Neo 1973]] and [[Neo FreeRunner]]:
 
 *[[Debug Board v1]], which was used internally at Openmoko
