--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -1,3 +1,4 @@
+{{Dboard}}
 {{outdated}}
 [[Image:Debug board top.jpg|thumb|400px|top side]]
 [[Image:Debug board bottom.jpg|thumb|400px|bottom side]]
