*Empty MediaWiki Message*

--- a/Connecting_Neo_1973_with_Debug_Board_v2.mw
+++ b/Connecting_Neo_1973_with_Debug_Board_v2.mw
@@ -4,7 +4,7 @@ __NOTOC__
 __NOEDITSECTION__
 '''Connecting your Neo1973 with the [[Neo1973 Debug Board v2]]'''
 
-The same procedure is suitable for [[Neo1973 Debug Board v3]].
+The same procedure is suitable for [[Debug Board v3]].
 
 
 
