--- a/Connecting_GTA01Bv2_with_Debug_Board.mw
+++ b/Connecting_GTA01Bv2_with_Debug_Board.mw
@@ -1,3 +1,4 @@
+{{Dboard}}
 {{outdated}}
 [[Image:Debug board connector closed.jpg|thumb|600px|connector closed]]
 [[Image:Debug board connector open.jpg|thumb|600px|connector open]]
