--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -1,5 +1,7 @@
 {{Dboard}}
 {{outdated}}
+This debug board was used internally at Openmoko. 
+
 [[Image:Debug board top.jpg|thumb|400px|top side]]
 [[Image:Debug board bottom.jpg|thumb|400px|bottom side]]
 [[Image:Debug board top annotated.jpg|400px|annotated top side]]
