--- a/Video_Player.mw
+++ b/Video_Player.mw
@@ -70,7 +70,7 @@ To rotate the screen:
 
 =Neo1973=
 
-Video is problematic on [[GTA01]].
+Video is problematic on [[Neo 1973]].
 
 On the minus side.
 *The CPU is certainly not fast enough to decode 480*640 video.
