--- a/UMTS.mw
+++ b/UMTS.mw
@@ -1,7 +1,7 @@
 From [http://en.wikipedia.org/wiki/UMTS Wikipedia UMTS]: '''Universal Mobile Telecommunications System (UMTS)''' is a mobile standard of the ''third-generation (3G)'''.
 
-The Neo1973 [[GTA01]] does not support UMTS.
-The Neo1973 [[GTA02]] will not support UMTS.
+The [[Neo 1973]] does not support UMTS.
+The [[Neo FreeRunner]] will not support UMTS.
 
 In [[Neo1973_compatible_cellphone_providers#Japan|Japan, only UMTS]] is available, no GSM network exists there. For this and other reasons, support for UMTS is very desirable. This can be accommodated in the device itself or externally with '''supported''' peripheral hardware via [http://en.wikipedia.org/wiki/UMTS#3G_Handsets_and_Modems UMTS tether mode] using USB, Bluetooh, WiFi or infrared. Here is also rumored that Apple will support UMTS with iPhone.
 
