--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -388,30 +388,7 @@ A6 will be fine tune version of A5, only minor schematic change for better produ
 
 = Debug Board =
 
-== Debug Board Connector definition ==
-
-This is the connector used to connect the [[Debug Board]] and possibly other hardware.
-
-Connections are:
-* 39 - GND
-* 38 - STDI
-* 37 - _RESET
-* 36 - STMS
-* 35 - STCK
-* 34 - STDO
-* 33 - GSM_EN
-* 29 - _STRST
-* 19 - X_I2C_SCL (H-TP4703)
-* 18 - X_I2C_SDA (H-TP4704)
-* 17 - SPI_CLK0
-* 16 - SPI_MOSI0
-* 15 - SPI-MISO0 
-* 14 - SS0
-* 13 - EINT3 (H-TP4705)
-* 3 - CONSOLE_TXD (H-TP4701)
-* 2 - CONSOLE_RXD (H-TP4702)
-
-Information from [http://people.openmoko.org/roh/Debugport_GTA01bv4.png].
+{{Main|Debug_Board_v3}}
 
 = Distinguishing hardware revisions =
 == Inside the [[Bootloader]] ==
