/* Installing Minimo web browser */

--- a/Minimo.mw
+++ b/Minimo.mw
@@ -36,7 +36,7 @@ Ex:
 
 Using Minimo with the stock Om2008.8 gets annoying because the keyboard always takes up half the screen.  I recommend reactivating the [[Keyboard_Toggle#Reactivating_the_keyboard_toggle_under_Om2008.8|Keyboard Toggle]] so that you can hide the keyboard while browsing.
 
-
+I also highly recommend getting [[GPRS]] going so that you can browse on the go!
 
 == Running in Xephyr PC environment ==
 
