*Empty MediaWiki Message*

--- a/GTA01:Neo_1973.mw
+++ b/GTA01:Neo_1973.mw
@@ -2,18 +2,11 @@
 
 The '''Neo 1973''' (internal codename GTA01) is the first phone designed to run [[Openmoko]].
 It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
-This pages contains all GTA01 related topic of wiki. Press the following links , you can easily find the page you want.
+This pages contains all GTA01 related topic of wiki. Press the following links, you can easily find the page you want.
 
-Note that the Neo 1973 can not currently run the OM 2008.8 software (the latest release).<strike>, and that there are no immediate plans to make that happen.  Users should instead purchase a Freerunner if they wish to participate in the Openmoko community.</strike> On Aug. 14, 2008, Marek provided an update:
+Note that the Neo 1973 can not currently run the OM 2008.8 software (the latest release). Currently the developers are working on a major infrastructure change (debian style package management) which will enable them to port Om 2008.8 to GTA01. 
 
-Currently we are working on a major infrastructure change (debian style 
-package management) which will enable us to port Om 2008.8 to GTA01. Once 
-this shift to the new style has been completed we wont have the perfect GTA01 
-support yet but we are moving towards that direction. You can support that by 
-helping us later on.
-
-We have enough GTA01 lovers within Openmoko itself, so that it wont be 
-forgotten.   :-) 
+The Openmoko developers are still actively developing for the Neo 1973.
 
 {{Gta01}}
 
