--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -297,9 +297,9 @@ AKII Technology Charger
 *Output: +5v up to 2.0A
 *Add 47.5k 1% resistor between ID pin and ground for openmoko charger identification<br>
 
-= History =
+= Development =
 
-see [[GTA02 development]]
+{{Main|GTA02 development}}
 
 = Debug Board =
 
