*Empty MediaWiki Message*

--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -1,5 +1,36 @@
 This gives you an overview of all different stages the hardware team needed, before the [[Neo FreeRunner]] was born. The internal codename of the [[Neo FreeRunner]] was GTA02.
 
+== GTA02 specification ==
+The GTA02 will be a [[GTA01]] but with a major revision of everything. These components were added:
+* Wifi: Atheros 802.11 b/g
+* CPU: Samsung S3C2442 B54 SoC @ 400Mhz
+* SMedia Glamo3362 Graphics Accelerator
+* 2x ST 3D Accelerometers
+* 256MB Flash
+* 128MB SDRAM
+* 2MB NOR Flash
+* 1200mAh Battery
+* 2 LEDs illuminating the two buttons. 
+* GPS: u-blox/Atmel ATR0635
+* Bluetooth
+* GSM/GPRS: 850/1800/1900 Mhz or 900/1800/1900 Mhz
+* USB Host function with power
+And it lost:
+* One speaker, becoming mono. 
+
+== Estimated time line ==
+* GTA02v3 design finalized - DONE
+* GTA02v3 power supply flaw found, GTA02v4 needed - DONE
+* GTA02v4 design finalized - DONE
+* GTA02v4 small number produced for Openmoko internal developer evaluation - DONE
+* GTA02v4 thorough evaluation by Openmoko internal developers - In progress
+* GTA02v4 flaw found, GTA02v5 needed - On hold while further development on drivers is done to ensure no further hardware bugs. - In progress
+* GTA02v5 design finalized - DONE
+* GTA02v5 small number produced for Openmoko internal developer evaluation - Done (around 20)
+* GTA02v5 thorough evaluation by Openmoko internal developers - Done
+* GTA02v5 produced in moderate volume - Done
+* GTA02v5 goes on sale to community via web store - Done 
+
 == GTA02v1 ==
 First generation of prototypes that was given to internal Openmoko software developers. Total 30 pcs fabricated.
 
