/* GTA02  (Neo FreeRunner) */

--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -9,57 +9,7 @@ The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chi
 The next phone, GTA03, will be based on the same system-on-a-chip as the Neo FreeRunner (GTA02). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks.
 
 == GTA02  (Neo FreeRunner)==
-{{Main|Neo FreeRunner}}
-The device will hopefully go on sale for developers in future months.
-
-=== Estimated time line === 
-
-* GTA02v3 design finalized - DONE
-* GTA02v3 power supply flaw found, GTA02v4 needed - DONE
-* GTA02v4 design finalized - DONE
-* GTA02v4 small number produced for Openmoko internal developer evaluation - DONE
-* GTA02v4 thorough evaluation by Openmoko internal developers - ''In  progress''
-* GTA02v4 flaw found, GTA02v5 needed - On hold while further development on drivers is done to ensure no further hardware bugs. - ''In  progress''
-* GTA02v5 design finalized - DONE
-* GTA02v5 small number produced for Openmoko internal developer evaluation - Done (around 20)
-* GTA02v5 thorough evaluation by Openmoko internal developers - Done
-* GTA02v5 produced in moderate volume - Done
-* GTA02v5 goes on sale to community via web store - Done
-
-
-
-(For the very latest news, visit [[Community Updates]], which also allows you to suggest questions or topics for future updates.)
-
-It will have the following new hardware components:[http://lists.openmoko.org/pipermail/community/2007-July/008458.html]
-
- * Atheros 802.11 b/g WiFi
- * Samsung S3C2442 B54 SoC @ 400Mhz
- * SMedia Glamo3362 Graphics Accelerator
- * 2x ST 3D Accelerometers
- * 256MB Flash
- * 128MB SDRAM
- * 2MB NOR Flash
- * 1200mAh Battery
- * 2 LEDs illuminating the two buttons. 
- * u-blox/Atmel ATR0635 GPS
- * Bluetooth
- * 850/1800/1900 Mhz or 900/1800/1900 Mhz for GSM/GPRS
- * USB Host function with power
-
-It will also lose:
- * One speaker, becoming mono. 
-
-We will sell this device through multiple channels. Direct from
-openmoko.com, the price will be $399 for the Neo Base and $99 for the debug board.
-
-Adds to the Phase 1 phone (see [[Neo1973:_GTA01Bv4_versus_GTA02_comparison|side by side comparison]]):
-* 2D Graphics-Accelerator (in theory 3D - however driver is unlikely to be available to to lack of core dev time and inability to supply docs without NDA to third parties.
-* 2 Accelerometers 
-* Faster CPU - S3C2442/400
-* WiFi: [http://lists.openmoko.org/pipermail/announce/2007-April/000012.html Atheros AR6K] (see also [http://lists.openmoko.org/pipermail/community/2007-April/004934.html])
-** Above from [http://sicherheitsschwankung.de/gallery/v/openmoko/IMG_8662-slide.JPG.html] '' and other sources
-* 500mA powered USB host
-* There will be no changes in the external housing, but internal plastics change. [http://lists.openmoko.org/pipermail/community/2007-July/008458.html] [http://lists.openmoko.org/pipermail/community/2007-March/004255.html] 
+{{Main|GTA02 development}}
 
 == GTA01Bv4 (Neo 1973)==
 {{Main|Neo 1973 Phase 1}}
