*Empty MediaWiki Message*

--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -19,6 +19,7 @@ And it lost:
 * One speaker, becoming mono. 
 
 == Estimated time line ==
+{{Todo|It should be nice if their are some dates next to the milestones}}
 * GTA02v3 design finalized - DONE
 * GTA02v3 power supply flaw found, GTA02v4 needed - DONE
 * GTA02v4 design finalized - DONE
