*Empty MediaWiki Message*

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -191,105 +191,11 @@ A number of alternate case designs have been suggested and requested.
 
 [[Alternate Neo1973 case designs]]
 
-== History ==
-=== GTA01 ===
-This is the most simple, non-bluetooth version of the prototype.
-
-==== GTA01v3 ====
-First generation of prototypes that was given to internal OpenMoko software developers.
-
-Unfortunately not useful at all due to non-working touchscreen.
-
-* ATAG_REVISION: 0x0000130
-
-==== GTA01v4 ====
-Second generation of prototypes that was given to [[User:HaraldWelte|Harald]] +[[User:Mickey|Mickey]].
-
-Unfortunately still not useful due to half-working touchscreen.
-
-* ATAG_REVISION: 0x00000140
-
-=== GTA01B ===
-This is the bluetooth-enabled fork of GTA01
-
-==== GTA01Bv2 ====
-This is the first produced version of the bluetooth-enabled version.
-
-* ATAG_REVISION: 0x00000220
-
-==== GTA01Bv3 ====
-This is the second produced version of the bluetooth-enabled version. It contains mainly GPS-related fixes.
-
-* ATAG_REVISION: 0x00000230
-
-This is the version that is shipped in [[Neo1973#Phase_0_.28GTA01Bv3.29|Phase 0]].
-
-===== GTA01Bv3 Errata =====
-====== PMU unable to resume from suspend ======
-Due to use of wrong GPIO/EINT pin, the PMU cannot wake-up the phone after suspend.  This means, specifically, '''the following events can not bring the phone back from suspend-to-ram''':
-* PMU RTC Alarm
-* Power button press
-* Charger events (charger insertion/removal/error)
-* Low battery
-
-====== Stand-by time extremely low ======
-This is due to a design bug resulting in at least 30mA additional standby current, since we cannot properly switch off the power supply to the S3C2410 PLL's.  There is nothing we can do to change this with post-production fixes.  GTA01Bv4 will address this issue.
-
-====== GSM doesn't resume phone from suspend ======
-The GSM modem currently doesn't signalize a wakeup interrupt to the S3C2410 in case there's some noteworthy event, such as incoming call, loss of network, incoming SMS or the like.
-
-This is a serious issue, but can be fixed with a GSM Modem Firmware update.
-
-====== GSM Sidetone too loud ======
-The local feedback sidetone (see [http://en.wikipedia.org/wiki/Sidetone]) is too loud.  This will be addressed in a GSM firmware update
-
-====== Bad block ======
-Due to an error in the production process, the factory-programmed NAND bad block information has been lost.  This means that some blocks in the flash will wear out rapidly, which might become as bad as rendering the device unusable.
-
-==== GTA01Bv4 ====
-This is the version that is being shipped in [[Neo1973#Phase_1_.28GTA01Bv4.29|Phase 1]]
-
-===== Looks =====
-This is what the GTA01Bv4 PCB looks like without the shielding cans, which will be fitted later.
-[[Image:Gta01b_v4_front.jpg|thumb|400px|Component side]]
-[[Image:Gta01b_v4_back.jpg|thumb|400px|Display side]]
-
-===== Errata =====
-
-There were two versions of GTA01Bv4: some were given away (red mainboard), and some were sold (green mainboard). The given-away have [[one transistor too many]].
-
-===== Changes from GTA01Bv3 =====
-# Fix all Errata items from GTA01Bv3
-# Add I2C, SPI and one irq and wakeup capable GPIO pin to debug port plus have test pads for all these signals (for soldering wires directly on the pcb)
-# Fix a number of production related details and minor hardware details that are not user-visible
-
-===GTA02===
-The [[GTA02#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|GTA02]] is now called the Neo FreeRunner and shipped within the "Mass Market launch" (see [http://wiki.openmoko.org/wiki/Neo1973#.22Phase_2.22_.28GTA02.2C_.22Mass_Market.22.29|timeline]).
-It is a new main release with [[Neo1973:_GTA01Bv4_versus_GTA02_comparison|features added]]
+== Hardware revisions==
+{{Main|GTA01 revisions}}
 
 ===Debug Connector===
-This is the connector used to connect the [[Debug Board]] and possibly other hardware.
-
-Connections are:
-* 39 - GND
-* 38 - STDI
-* 37 - _RESET
-* 36 - STMS
-* 35 - STCK
-* 34 - STDO
-* 33 - GSM_EN
-* 29 - _STRST
-* 19 - X_I2C_SCL (H-TP4703)
-* 18 - X_I2C_SDA (H-TP4704)
-* 17 - SPI_CLK0
-* 16 - SPI_MOSI0
-* 15 - SPI-MISO0 
-* 14 - SS0
-* 13 - EINT3 (H-TP4705)
-* 3 - MODEM_TXD (H-TP4701)
-* 2 - MODEM_RXD (H-TP4702)
-
-Information from [http://people.openmoko.org/roh/Debugport_GTA01bv4.png].
+{{Main|Debug Board v2}}
 
 ===Test points===
 
