--- a/GTA01_revisions.mw
+++ b/GTA01_revisions.mw
@@ -64,6 +64,36 @@ Due to an error in the production process, the factory-programmed NAND bad block
 = GTA01Bv4 =
 This is the version that is being shipped in [[Neo1973#Phase_1_.28GTA01Bv4.29|Phase 1]]
 
+== Sold Versions ==
+Neo 1973 Base -- everything the mobile application developer needs to enjoy
+the benefits of the first freed phone, the Neo 1973:
+
+ * Neo 1973 (GTA01B_v4)
+ * Battery (1200mAh)
+ * Stylus
+ * Headset
+ * Phone Pouch
+ * Lanyard
+ * SanDisk 512MB MicroSD Card
+ * Mini USB Connectivity Cable
+
+Neo 1973 Advanced -- everything the mobile device hacker wants to get down
+and dirty with the first freed phone, the Neo 1973:
+
+ * Neo 1973 (GTA01B_v4)
+ * Battery (1200mAh) (2x)
+ * Stylus
+ * Headset
+ * Phone Pouch
+ * Lanyard
+ * SanDisk 512MB MicroSD Card (2x)
+ * Mini USB Connectivity Cable (2x)
+ * Debug Flex Cable
+ * Debug Board v2 (JTAG and serial console)
+ * Ruggedized Toolbox with shoulder strap
+ * Guitar Pick (for opening case)
+ * Torx T6 screwdriver
+
 == Looks ==
 This is what the GTA01Bv4 PCB looks like without the shielding cans, which will be fitted later.
 [[Image:Gta01b_v4_front.jpg|thumb|400px|Component side]]
