--- a/GTA01_revisions.mw
+++ b/GTA01_revisions.mw
@@ -37,7 +37,7 @@ This is the second produced version of the bluetooth-enabled version. It contain
 
 * ATAG_REVISION: 0x00000230
 
-This is the version that is shipped in [[Neo 1973 Phase 0|Phase 0]].
+This is the version that is shipped in [[Neo 1973 Phase 0|Phase 0]] to 36 developers [http://lists.openmoko.org/pipermail/announce/2007-March/000006.html].
 
 == GTA01Bv3 Errata ==
 === PMU unable to resume from suspend ===
