*Empty MediaWiki Message*

--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -9,12 +9,7 @@ The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chi
 The next phone, GTA03, will be based on the same system-on-a-chip as the Neo FreeRunner (GTA02). It will presumably differ from it by having a 3.5 mm TRS audio connector (instead of a 2.5 mm connector), EDGE and a camera. GTA03 will not include support for 3G networks.
 
 == GTA02  (Neo FreeRunner)==
-{{Main|GTA02 development}}
+{{Main|GTA02 revisions}}
 
-== GTA01Bv4 (Neo 1973)==
-{{Main|Neo 1973 Phase 1}}
-
-== GTA01Bv3 ==
-{{Main|Neo 1973 Phase 0}}
-:''See also [[Wishlist:Neo1973_P0_Review]]
-36 developers have received their devices. [http://lists.openmoko.org/pipermail/announce/2007-March/000006.html]
+== GTA01 (Neo 1973)==
+{{Main|GTA01 revisions}}
