--- a/WM8976.mw
+++ b/WM8976.mw
@@ -1,11 +1,11 @@
 {{outdated}}
 The WM8976 is a stereo audio codec with speaker driver.
 
-{{note|It is used in the prototype generations [[Neo1973 Hardware#GTA01v3 | GTA01v3]] and [[Neo1973 Hardware#GTA01v4 | GTA01v4]], but not in any released hardware revision, where it was replaced by the [[WM8753]].}}
+{{note|It is used in the prototype generations [[GTA01 revisions|GTA01v3]] and [[GTA01 revisions|GTA01v4]], but not in any released hardware revision, where it was replaced by the [[WM8753]].}}
 
 It supports various sample rates (8, 11.025, 12, 16, 22.05, 24, 32, 44.1 and 48kHz) and features a five-band equalizer as well as 3-D stereo enhancement.
 
-The configuration in the GTA01 is like this:
+The configuration in the [[GTA01 revisions|GTA01]] is like this:
 
 * IIS and I2C connected to S3C2410
 * LOUT2/ROUT2 connected to stereo amplifier (integrated speakers)
