Undo revision 46950 by [[Special:Contributions/Dewey|Dewey]] ([[User talk:Dewey|Talk]])

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -14,15 +14,9 @@ The OpenMoko Installer (Codename: [http://code.google.com/p/om-assassin/ Assassi
 [[Image:Om2008 installer2.png|200px|thumb|install application]]
 |}
 ==Install an Application ==
-
-There are two ways to install an application:
-
-
-=== 1. Using the Graphical Installer ===
-
 '''Installer''' needs an internet connection to install applications for the repositories.  This can be done via WiFi (currently unstable), [http://svn.openmoko.org/developers/tick/Test_env_script_GTA02A5/setneo USB], [[GPRS]] or [[How_to_use_bluetooth_to_transfer_data_between_Neo_and_Desk-top|Bluetooth]].
 
-====Instructions====
+===Instructions===
 
 '''[1]'''   Make sure you are connected to the internet and launch '''Installer'''.  
 
@@ -35,18 +29,6 @@ There are two ways to install an application:
 '''[5]'''   Once the progress bar shows '''Done''', you will return to the Installer default page.  Installation is then complete.
 
 * To ''update'' or ''uninstall'' packages, simply replace step '''[2]''' with the desired function '''UPDATE''' or '''UNINSTALL''' and repeat steps '''[3]''' through '''[5]'''.
-
-=== 2. Using opkg from the command line ===
-
-  opkg install <package name from repository, filename, or url to package>
-
-This method is most useful for installing packages that are not in any of the repositories.  You may have to kill the packagekit service if opkg compalins about:
-
-   * Could not obtain administrative lock
-
-Issue a 
-
-  pkill packagekit
 
 ==Sharing Applications==
 Sharing applications is done by uploading packages to the [http://downloads.openmoko.org/repository/Multiverse/ Community Repository], which is a similar concept to the Multiverse repository in Ubuntu.  [[CommunityRepository|Anyone can upload applications]] or even their own repository to share with fellow Neo owners.
