*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Alsace.mw
+++ b/Openmoko_Local_Groups:_Alsace.mw
@@ -8,7 +8,7 @@ Alsace
 |-
 |[[User:Martoni|Fabien Marteau]]
 |C,Python, ARM, VHDL,
-|Applications, Electronic
+|Applications, Electronic, openstreetmap
 |Mulhouse (68)
 |-
 |}
