--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -74,7 +74,7 @@ Issue: NOR flash (backup copy of u-boot) is not programmed. [http://docs.openmok
 
 Affects: Unknown - maybe only 1 or 2 devices? Also need to confirm that the bug report was from a mass-production unit rather than an earlier prototype.
 
-Status: Unknown
+Status: Solved. The new devices are tested better if they have the NOR flashed programmed and aren't shipped if the test fail.
 
 Workarounds: Use the NAND copy of u-boot and be careful not to brick the device unless a debug-board is available.
 
